--- a/AOC2021.cabal
+++ b/AOC2021.cabal
@@ -41,7 +41,8 @@ library
   hs-source-dirs:
       src
   build-depends:
-      base >=4.7 && <5
+      array
+    , base >=4.7 && <5
     , containers
     , split
   default-language: Haskell2010
@@ -55,6 +56,7 @@ executable AOC2021-exe
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       AOC2021
+    , array
     , base >=4.7 && <5
     , containers
     , split
@@ -70,6 +72,7 @@ test-suite AOC2021-test
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       AOC2021
+    , array
     , base >=4.7 && <5
     , containers
     , split
