--- a/haskell/AOC2021.cabal
+++ b/haskell/AOC2021.cabal
@@ -25,18 +25,19 @@ source-repository head
 
 library
   exposed-modules:
+      Day01
+      Day02
+      Day03
+      Day04
+      Day05
+      Day06
+      Day07
+      Day08
+      Day09
+      Day10
       Day11
       Day12
-      DayEight
-      DayFive
-      DayFour
-      DayNine
-      DayOne
-      DaySeven
-      DaySix
-      DayTen
-      DayThree
-      DayTwo
+      Day13
       Lib
       Utils
   other-modules:
