--- a/haskell/AOC2021.cabal
+++ b/haskell/AOC2021.cabal
@@ -48,6 +48,7 @@ library
       array
     , base >=4.7 && <5
     , containers
+    , parsec
     , split
   default-language: Haskell2010
 
@@ -63,6 +64,7 @@ executable AOC2021-exe
     , array
     , base >=4.7 && <5
     , containers
+    , parsec
     , split
   default-language: Haskell2010
 
@@ -79,5 +81,6 @@ test-suite AOC2021-test
     , array
     , base >=4.7 && <5
     , containers
+    , parsec
     , split
   default-language: Haskell2010
