--- a/haskell/AOC2021.cabal
+++ b/haskell/AOC2021.cabal
@@ -39,6 +39,7 @@ library
       Day12
       Day13
       Day14
+      Day15
       Lib
       Utils
   other-modules:
@@ -46,10 +47,12 @@ library
   hs-source-dirs:
       src
   build-depends:
-      array
+      MemoTrie
+    , array
     , base >=4.7 && <5
     , containers
     , parsec
+    , pqueue
     , split
   default-language: Haskell2010
 
@@ -62,10 +65,12 @@ executable AOC2021-exe
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       AOC2021
+    , MemoTrie
     , array
     , base >=4.7 && <5
     , containers
     , parsec
+    , pqueue
     , split
   default-language: Haskell2010
 
@@ -79,9 +84,11 @@ test-suite AOC2021-test
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       AOC2021
+    , MemoTrie
     , array
     , base >=4.7 && <5
     , containers
     , parsec
+    , pqueue
     , split
   default-language: Haskell2010
