--- a/haskell/AOC2021.cabal
+++ b/haskell/AOC2021.cabal
@@ -25,7 +25,38 @@ source-repository head
 
 library
   exposed-modules:
+      PathFinding
       Utils
+      Year2021.Day01
+      Year2021.Day02
+      Year2021.Day03
+      Year2021.Day04
+      Year2021.Day05
+      Year2021.Day06
+      Year2021.Day07
+      Year2021.Day08
+      Year2021.Day09
+      Year2021.Day10
+      Year2021.Day11
+      Year2021.Day12
+      Year2021.Day13
+      Year2021.Day14
+      Year2021.Day15
+      Year2021.Day16
+      Year2021.Day17
+      Year2021.Day18
+      Year2022.Day01
+      Year2022.Day02
+      Year2022.Day03
+      Year2022.Day04
+      Year2022.Day05
+      Year2022.Day06
+      Year2022.Day07
+      Year2022.Day08
+      Year2022.Day09
+      Year2022.Day10
+      Year2022.Day11
+      Year2022.Day12
   other-modules:
       Paths_AOC2021
   hs-source-dirs:
@@ -35,6 +66,7 @@ library
     , array
     , base >=4.7 && <5
     , containers
+    , mtl
     , parsec
     , pqueue
     , split
@@ -53,6 +85,7 @@ executable AOC2021-exe
     , array
     , base >=4.7 && <5
     , containers
+    , mtl
     , parsec
     , pqueue
     , split
@@ -72,6 +105,7 @@ test-suite AOC2021-test
     , array
     , base >=4.7 && <5
     , containers
+    , mtl
     , parsec
     , pqueue
     , split
